--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,7 @@
             "email": "martynamoczulska2004@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "steampixel/simple-php-router": "^0.7.1"
+    }
 }
